Responsive Blog Page

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,16 @@ permalink: /blog/
     padding-bottom: 10px;
     padding-top: 10px;
   }
+  
+  @media only screen and (max-width: 500px) {
+ img,h3,p {
+  text-align: center;
+}
+.img-responsive{
+margin: auto;
+width: 100px;
+}
+}
 </style>
 <div class="container mtb">
   <div class="row">
