Responsive Blog & Gallery Page

--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@ permalink: /blog/
   
   @media only screen and (max-width: 500px) {
  img,h3,p {
-  text-align: center;
+  text-align: left;
 }
 .img-responsive{
 margin: auto;
